# digit-identifier

./: CMakeLists.txt  README.md
src/: Grid.cpp  Grid.h  main.cpp  net.h
src/Math/: Matrix.cpp  Matrix.h
